[package]
name = "dlog"
version = "0.1.1"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37.0", features = ["array"] }
clap = { version = "4.5.4", features = ["derive"] }
dirs = "5.0.1"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0.228", features = ["derive"] } 
serde_json = "1.0.145"
